build(release): publish desktop installers alongside the jar
The Electron shell is only an application once someone can install it, so the
release job now builds installers as well as the uberjar: AppImage and deb on
Linux, an NSIS installer on Windows, a dmg on macOS.

Packaging is a build.clj task, `package-electron`: it stages the payload and then
runs electron-builder over it. That keeps one entry point and one place that
knows the order, and it puts the work where the answers already are — build.clj
knows the version (DAPR_VERSION -> git tag -> SNAPSHOT) and therefore the jar's
exact name, so a mismatch is an error rather than a stale jar packaged silently.
jlink is a JDK tool besides, which makes the runtime the JVM build's business.
npm keeps only what is genuinely the shell's: `npm start` and `npm test`.

Each installer carries its own trimmed JRE, linked at package time and staged
beside the uberjar in the app's resources; src/backend.js prefers it over
anything on PATH. Without it an installer would silently require the user to have
JDK 25, which is not what installing an application should mean. It costs ~73 MB,
taking a Linux installer to roughly 190 MB.

The module set is java.se plus jdk.unsupported, jdk.crypto.ec, jdk.zipfs and
jdk.localedata — generous on purpose rather than derived from jdeps. Clojure
resolves classes at runtime and the device backends reach the OS through JNA, so
static analysis under-reports what actually loads, and the failure mode is a
NoClassDefFoundError on a user's machine months later on whichever path was not
exercised at build time.

This does re-introduce a per-OS release matrix, but not the one removed with
JavaFX: the jar is still universal and still built once (the matrix downloads it
rather than rebuilding, so the installers cannot disagree with the published
jar). What is per-OS is the installer and the native runtime inside it. The
matrix is fail-fast: false — two installers out of three beats none, and the jar
is a